infrastructure/01-system/vault/manifests/policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: vault-security-hardened
  namespace: vault
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vault
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vault
      toPorts:
        - ports:
            - port: "8201"
              protocol: TCP
    - fromEndpoints:
        - {}
      fromEntities:
        - all
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": auth
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": pass
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": external-secrets
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": traefik
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": falco
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": hubble
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": immich
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": notifications
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": memos
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": n8n
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": alloy
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": radicale
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": sure
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": auth
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": traefik
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
